# short-of-inventory

./: .pre-commit-config.yaml  Dockerfile  config.toml  pyproject.toml  shell.nix
helpers/: db_create.py  import_txt.py
shortener/: __main__.py  database.py  settings.py  web.py
shortener/templates/: add.html  base.html  flashes.html  footer.html  index.html  label_view.html
