[tool.poetry]
name = "short-of-inventory"
version = "0.1.0"
description = "Url shortener, and links for inventory menagement"
authors = ["Norbert Szulc <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
peewee = "^3.14.4"
gunicorn = "^20.1.0"
toml = "^0.10.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
