[tool.poetry]
name = "short-of-inventory"
version = "0.1.0"
description = "Url shortener, and links for inventory menagement"
authors = ["Norbert Szulc <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
peewee = "^3.14.4"
gunicorn = "^20.1.0"
requests = "^2.25.1"
tomlkit = "^0.7.0"
Flask-WTF = "^1.0.0"
eventsourcing = "^9.1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pytest-black = "^0.3.12"
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["flask", "peewee", "requests", "tomlkit"]
